corpus/cpp/deleted_function/case-01/snapshots/gcc15/dual_sink_structured/render.verbose.txt
error: [unavailable_api] use of a deleted or unavailable function @ src/main.cpp:10:5
help: check whether the type is movable/copyable, or provide the required special member
name: NoCopy::NoCopy(const NoCopy&)
use : take(value);
from: src/main.cpp:3:5 NoCopy(const NoCopy&) = delete;
| src/main.cpp:10:5
|     take(value);
|     ^
debug: rule_id=rule.family.deleted_function.message_terms
debug: matched_conditions=message_contains=use of deleted function, phase=semantic
other diagnostics:
  - src/main.cpp:10:5: note: type or overload mismatch
  - src/main.cpp:6:11: note: initializing argument 1 of 'void take(NoCopy)'
details: --formed-explain | raw: --formed-raw